<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:padding="16dp"
    tools:context=".ui.drawer.about_us.AboutUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingBottom="20dp"
            android:src="@drawable/eduzap_logo_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/about_background"
            android:paddingLeft="8dp"
            android:text="About"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.borjabravo.readmoretextview.ReadMoreTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/EDUzap_About"
            android:textSize="17sp"
            app:colorClickableText="@color/colorPrimaryDark"
            app:trimCollapsedText="Show less"
            app:trimExpandedText="Show more"
            app:trimLength="200"

            app:trimMode="trimModeLength" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/eduzapcover" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/about_background"
            android:paddingLeft="8dp"
            android:text="Method of Teaching"
            android:textSize="20sp"

            android:textStyle="bold" />

        <com.borjabravo.readmoretextview.ReadMoreTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="16dp"
            android:text="@string/Method_of_Teaching"
            android:textSize="17sp"
            app:colorClickableText="@color/colorPrimaryDark"
            app:trimCollapsedText="Show less"
            app:trimExpandedText="Show more"
            app:trimLength="200"
            app:trimMode="trimModeLength" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/about_background"
            android:paddingLeft="8dp"
            android:text="People Behind"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Love_To_Learn"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:textStyle="bold" />


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                //co-founders

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/cofounder_1_img"
                            android:layout_width="160dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:scaleType="centerInside"
                            android:src="@drawable/anurajeduzapfounder" />

                        <TextView
                            android:id="@+id/cofounder_1_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cofounder_1_img"
                            android:gravity="center"
                            android:paddingLeft="30dp"
                            android:text="ANURAJ A R"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cofounder_1_name"
                            android:paddingLeft="30dp"
                            android:text="CO-FOUNDER "
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="italic" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/cofounder_2_img"
                            android:layout_width="160dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:scaleType="centerInside"
                            android:src="@drawable/hareesheduzapfounder" />

                        <TextView
                            android:id="@+id/cofounder_2_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cofounder_2_img"
                            android:gravity="center"
                            android:paddingLeft="30dp"
                            android:text="HAREESH KRISHNAN H"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/cofounder_2_name"
                            android:paddingLeft="30dp"
                            android:text="CO-FOUNDER "
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="italic" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                //chief and media

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/chief_img"
                            android:layout_width="160dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:scaleType="centerInside"
                            android:src="@drawable/syameduzapchief" />

                        <TextView
                            android:id="@+id/chief_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/chief_img"
                            android:gravity="center"
                            android:paddingLeft="30dp"
                            android:text="SYAM LAL S"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/chief_name"
                            android:paddingLeft="30dp"
                            android:text="CHIEF EDUCATOR"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="italic" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:selectableItemBackground"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/promotion_executive_img"
                            android:layout_width="160dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:scaleType="centerInside"
                            android:src="@drawable/faazileduzapmedia" />

                        <TextView
                            android:id="@+id/promotion_executive_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/promotion_executive_img"
                            android:gravity="center"
                            android:paddingLeft="30dp"
                            android:text="FAZIL SHAJI"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/promotion_executive_name"
                            android:paddingLeft="30dp"
                            android:text="MEDIA AND PROMOTION"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="italic" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </HorizontalScrollView>


    </LinearLayout>

</ScrollView>